<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size_8dp"
    android:elevation="@dimen/size_16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/size_75dp"
            android:layout_height="@dimen/size_75dp"
            android:layout_marginStart="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/weather_condition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/region"
            android:layout_width="@dimen/size_120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_16dp"
            android:contentDescription="@string/region"
            android:fontFamily="monospace"
            android:text="@string/region"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/day"
            android:layout_width="@dimen/size_120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/day"
            android:fontFamily="monospace"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/region"
            tools:text="@string/day" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/size_16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="monospace"
            android:text="@string/max"
            app:layout_constraintStart_toEndOf="@+id/day"
            app:layout_constraintTop_toBottomOf="@+id/region" />

        <TextView
            android:id="@+id/max_in_c_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_8dp"
            android:layout_marginTop="@dimen/size_16dp"
            android:fontFamily="monospace"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/min_in_c_value" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_24dp"
            android:fontFamily="monospace"
            android:text="@string/min"
            app:layout_constraintStart_toEndOf="@+id/region"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/min_in_c_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_8dp"
            android:layout_marginTop="@dimen/size_24dp"
            android:layout_marginEnd="@dimen/size_16dp"
            android:fontFamily="monospace"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.096"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>